# adventofcode2021

./: Cargo.toml  README.md
.github/workflows/: release.yml  tag.yml  test.yml
src/: graph.rs  main.rs  utils.rs  window.rs
src/days/: eight.rs  eighteen.rs  eleven.rs  fifteen.rs  five.rs  four.rs  fourteen.rs  mod.rs  nine.rs  nineteen.rs  one.rs  seven.rs  seventeen.rs  six.rs  sixteen.rs  ten.rs  thirteen.rs  three.rs  twelve.rs  twenty.rs  twentyfive.rs  twentyfour.rs  twentyone.rs  twentythree.rs  twentytwo.rs  two.rs
src/days/sixteen/: mod.rs  packets.rs
src/utils/: dec.rs  inc.rs  matrix.rs  mod.rs
