[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bresenham = "0.1.1"
fifo-set = "1.0.0"
petgraph = "0.6.0"
bimap = "0.6.1"
pathfinding = "3.0.5"
num-traits = "0.2.14"
bitbuffer = "0.10.3"
